test/cli/test-mutating-policy/mutating-label/patchedResource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    managed: "true"
  name: dev-deploy-2
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
